# alexo.io

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  deploy.sh  index.html
.github/workflows/: mirror.yml  rust.yml
assets/styling/: gruvbox-dark.css  gruvbox-light.css  index.css
frontend/: Cargo.toml  index.html
frontend/assets/styling/: gruvbox-dark.css  gruvbox-light.css  index.css
frontend/src/: main.rs  theme_store.rs
frontend/src/components/: about_section.rs  certifications_section.rs  contact_section.rs  data.rs  education_section.rs  experience_section.rs  footer_section.rs  header_section.rs  languages_section.rs  mod.rs  nav_section.rs  projects_section.rs  scroll_to_top.rs  skills_section.rs  timeline_card.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/components/: about_section.rs  certifications_section.rs  contact_section.rs  data.rs  education_section.rs  experience_section.rs  footer_section.rs  header_section.rs  nav_section.rs  projects_section.rs  scroll_to_top.rs  skills_section.rs
