[package]
name = "alexo-io"
version = "0.2.2"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
manganis = "0.7.3"
web-sys = { version = "0.3", features = [
    "MediaQueryList",
    "DomRect",
    "KeyboardEvent",
    "HtmlElement",
    "NodeList",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbRequest",
    "IdbTransactionMode",
    "DomStringList",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
